# docs/swagger.json
@@ -14,6 +14,41 @@
     },
     "host": "localhost:8080",
     "paths": {
+        "/case/Quote": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "message"
+                ],
+                "summary": "報價",
+                "parameters": [
+                    {
+                        "description": "新增報價",
+                        "name": "quote",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/case/create": {
             "post": {
                 "produces": [
@@ -252,6 +287,39 @@
                 }
             }
         },
+        "/message/chkNoRead": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "message"
+                ],
+                "summary": "chkNoRead",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "檢查是否有未讀訊息",
+                        "name": "msg",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/message/send": {
             "post": {
                 "security": [
@@ -275,6 +343,39 @@
                         "schema": {
                             "$ref": "#/definitions/model.MsgSend"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/message/updateRead": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "message"
+                ],
+                "summary": "UpdateRead",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "更新已讀",
+                        "name": "msg",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
